--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -174,9 +174,9 @@ footer {
   a.icon, a.closeIcon {display: none;}
   overflow:hidden;
   display: flex;
-  position: fixed;
+  //position: fixed;
   justify-content: center;
-  width: 100vw;
+  //width: 100vw;
   font-size: 170%;
   padding: 1% 0;
   z-index: 1;
@@ -210,20 +210,14 @@ footer {
     a.closeIcon {display:block; padding: 2rem 2rem 0 0; float: right; font-size: 130%;}
 }
 
-.featureArticles {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  @include media('>=desktop'){
-		height: 100vh;
-	}
-}
 .featureArticles_item{
   padding: auto 0;
   width: 100%;
+  @include media('<=tablet'){
+    width: 90%;
+    margin: auto;
+  }
+  
 }
 
 .section{
